--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,198 @@
 *{
-	padding: 0px;
 	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
+	font-family: 'Playfair Display', serif
 }
-a:link{
-	text-decoration: none;
+.header{
+	padding: 70px 0px 100px;
 }
 .text-center{
-	text-align: center;	
+	text-align: center;
+}
+.text-upper{
+		text-transform: uppercase;
+}
+a:link,
+a.link:hover,
+a.link:focus,
+a.link:active{
+	text-decoration: none;
+}
+.text-right{
+	text-align: right;
+}
+.ml-1grid{
+	margin-left: calc(100% / 12);
 }
 .container{
-	width: 1200px;
+	width: 1063px;
 	margin: 0 auto;
-	
-}	
-.head{
-	margin: 40px 0px 40px 0px;
-	color: #bb2733;
-	font-weight: bold;
-	font-size: 48px;
-	font-family: 'Passion One', cursive;
-	
 }
-.navbar{
+.row,
+.row::after,
+.row::before{
+	width: 100%;
+	clear: both;
+	display: table;
+}
+.col3, .col9, .col12, .col10, .col6, .col4{
+	float: left;
+	padding: 0px 15px;
+}
+.col3{
+	width: 25%;
+}
+.col9{
+	width: 75%;
+}
+.col6{
+	width: 50%;
+}
+.col10{
+	width: calc((100% * 10) / 12);
+}
+.col4{
+	width: calc(100% / 3);
+}
+.mb-30{
+	margin-bottom: 30px;
+}
+.mb-70{
+	margin-bottom: 70px;
+}
+.mb-50{
+	margin-bottom: 50px;
+}
+.mb-120{
+	margin-bottom: 120px;
+}
+.mb-85{
+	margin-bottom: 85px;
+}
+.ml-1grid{
+	margin-left: calc(100% / 12);
+}
+.ml-4grid{
+	margin-left: calc(100% / 3);
+}
+
+.mb-135{
+	margin-bottom: 135px;
+}
+.mt-78{
+	margin-top: 78px;
+}
+.pd-left0{
+	padding-left: 0px;
+}
+.pd-right0{
+	padding-right: 0px;
+}
+.btn{
+	padding: 25px 35px;
+	color: #626262;
+	border: 1px solid #626262;
+	font-size: 20px;
+	background-color: transparent;
+	cursor: pointer;
+	text-align: center
+}
+.btn:hover{
+	color: #fff;
+	background-color: #626262;
+}
+.navbar li {
 	list-style: none;
-	margin-bottom: 25px;
-}
-.navbar li{
 	display: inline-block;
-	margin: 0px 10px;
+	margin: 0px 15px 0px;
 	
+}
+.navbar:last-child li{
+	margin-right: 0px;
 }
 .navbar li a{
 	font-size: 14px;
-	padding: 5px;
-	color: #424242;
-	font-family: 'Open Sans', sans-serif;
+	color: #626262;
+	font-weight: lighter;
+	padding: 0px 10px 10px 10px;
+	display: inline-block;
+}   
+.navbar li:last-child a {
+	padding-right: 0;
 }
-.navbar li a.active,
-.navbar li a:hover,
-.navbar li a:focus,
-.navbar li a:active{
-	color: #bb2733;
+.heroimg img{
+	width: 100%;
 }
-.heroimg{
-	padding-bottom: 30px;
+/* ----------------section photodiary css---------------------- */
+.label{
+	font-size: 14px;
+	color: #b4ad9e;
+	font-weight: lighter;
+	font-family: 'Ubuntu', sans-serif;
 }
-.info h2{
-	padding-bottom:13px;
-	color: #be2230;
+.getaway, .para1{
+	color: #626262;
+	font-weight: lighter
+}
+.getaway{
+	font-size: 30px;
+		margin-bottom: 35px;
+}
+.para1{
+	font-size: 14px;
+	line-height: 19px;
+}
+.thumb-sec img{
+	margin-bottom: 32px;
+}
+.thumimg1 .img img{
+	width: 100%;
+}
+.sign-up{
+	padding: 75px 0px 75px;
+	background-color: #f0f0f0;
+	margin-top: 78px;
+	margin-bottom: 104px;
+}
+.sign-up .getaway{
+	margin-bottom: 84px;
+}
+.signup-control{
+	position: relative;
+}
+.signup-control  input{
+	border: 0px;
+	border-bottom: 1px solid #000;
+	background-color: #f0f0f0;
+	width: 100%;
+	outline: none;
+	padding: 0px 7px;
+	height: 30px;
+	font-size: 14px;
+}
+.signup-control i{
+	    position: absolute;
     font-size: 30px;
-	line-height:22px;
-	font-family: 'Poppins', sans-serif;
+    top: -9px;
+    right: 6px;
+    transform: rotate(45deg);
 }
-.info p{
-	font-size:14px;
-	color: #2e2e2e;
-	text-align: justify;
-	margin-bottom: 15px;
-	font-family: 'Poppins', sans-serif;
+    /* footer section css */
+
+
+.footer{
+	background-color: #f0f0f0;
+	padding: 40px 0px;
+}
+.footer-info li{
+	list-style: none;
+	display: inline-block;
+	margin: 2px;
+}
+.footer-info li a{
+	padding: 2px;
+	font-size: 14px;
+	font-weight: lighter;
+	color: #000;
 }
